--- a/journey-app/package.json
+++ b/journey-app/package.json
@@ -25,6 +25,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines":{
+    "node": "18.7.0",
+    "npm": "6.14.5"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
