--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^4.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
